# STM32-Study

day-01/: .gitignore  day-01+STM32F103C8.cbuild-run.yml  day-01.cbuild-idx.yml  day-01.cbuild-set.yml  day-01.csolution.yml
day-01/Project/: .clangd  Project.Debug+STM32F103C8.cbuild.yml  Project.cproject.yml  main.c
day-01/Project/RTE/_Debug_STM32F103C8/: RTE_Components.h
day-01/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
day-01/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake
day-01/tmp/Project.Debug+STM32F103C8/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
day-01/tmp/Project.Debug+STM32F103C8/src/Project.Debug+STM32F103C8-stamp/: Project.Debug+STM32F103C8-configure-.cmake  Project.Debug+STM32F103C8-database-.cmake  Project.Debug+STM32F103C8-source_dirinfo.txt
day-01/tmp/Project.Debug+STM32F103C8/tmp/: Project.Debug+STM32F103C8-cfgcmd.txt  Project.Debug+STM32F103C8-mkdirs.cmake
